[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
